--- a/Peppermint/Login.storyboard
+++ b/Peppermint/Login.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ceq-N7-4vt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ceq-N7-4vt">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -266,6 +266,7 @@
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_back" translatesAutoresizingMaskIntoConstraints="NO" id="kA6-3f-Tek">
                                     <rect key="frame" x="18" y="20" width="10" height="18"/>
+                                    <animations/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="18" id="Jd4-gy-TNm"/>
                                         <constraint firstAttribute="width" constant="10" id="xNI-Tw-sgb"/>
@@ -436,6 +437,7 @@
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_back" translatesAutoresizingMaskIntoConstraints="NO" id="FXP-4U-i8D">
                                     <rect key="frame" x="18" y="20" width="10" height="18"/>
+                                    <animations/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="18" id="Mf7-Gr-fkt"/>
                                         <constraint firstAttribute="width" constant="10" id="dzw-Ou-6yD"/>
