--- a/Peppermint/EmptyResultTableViewCell.xib
+++ b/Peppermint/EmptyResultTableViewCell.xib
@@ -7,11 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EmptyResultTableViewCell" id="mcT-ui-Gew" customClass="EmptyResultTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="290"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EmptyResultTableViewCell" rowHeight="221" id="mcT-ui-Gew" customClass="EmptyResultTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="221"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mcT-ui-Gew" id="88e-Lp-HvR">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="289"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRo-Nl-2Ld">
@@ -32,25 +32,12 @@ habe been found</string>
                             <constraint firstAttribute="height" constant="137" id="3gV-fs-ElV"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Enter an email address to send your first message" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NSp-vo-3VN">
-                        <rect key="frame" x="8" y="218" width="304" height="50"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="50" id="0kY-FN-nTm"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="NSp-vo-3VN" firstAttribute="leading" secondItem="88e-Lp-HvR" secondAttribute="leading" constant="8" id="0Hr-oZ-8qk"/>
                     <constraint firstAttribute="trailing" secondItem="GRo-Nl-2Ld" secondAttribute="trailing" constant="8" id="1gf-OG-c5N"/>
-                    <constraint firstItem="NSp-vo-3VN" firstAttribute="top" secondItem="6OV-Bj-hRK" secondAttribute="bottom" constant="20" id="43t-ER-O6S"/>
-                    <constraint firstAttribute="trailing" secondItem="NSp-vo-3VN" secondAttribute="trailing" constant="8" id="URg-f7-VLQ"/>
                     <constraint firstItem="GRo-Nl-2Ld" firstAttribute="top" secondItem="88e-Lp-HvR" secondAttribute="top" constant="8" id="cTW-RQ-9vg"/>
                     <constraint firstItem="6OV-Bj-hRK" firstAttribute="top" secondItem="GRo-Nl-2Ld" secondAttribute="bottom" constant="8" id="cwe-eB-PNZ"/>
-                    <constraint firstAttribute="bottom" secondItem="NSp-vo-3VN" secondAttribute="bottom" id="h6m-PC-Swr"/>
                     <constraint firstAttribute="centerX" secondItem="6OV-Bj-hRK" secondAttribute="centerX" id="iis-4r-zcr"/>
                     <constraint firstItem="6OV-Bj-hRK" firstAttribute="top" secondItem="GRo-Nl-2Ld" secondAttribute="bottom" constant="8" id="mv5-ge-XCx"/>
                     <constraint firstItem="GRo-Nl-2Ld" firstAttribute="leading" secondItem="88e-Lp-HvR" secondAttribute="leading" constant="8" id="r3m-NJ-O36"/>
@@ -58,15 +45,13 @@ habe been found</string>
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="cwe-eB-PNZ"/>
-                        <exclude reference="h6m-PC-Swr"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="footerLabel" destination="NSp-vo-3VN" id="I1U-E3-mAB"/>
                 <outlet property="headerLabel" destination="GRo-Nl-2Ld" id="5fv-7r-tUS"/>
             </connections>
-            <point key="canvasLocation" x="41" y="-72"/>
+            <point key="canvasLocation" x="41" y="-106.5"/>
         </tableViewCell>
     </objects>
     <resources>
